src/test/ui/parser/lex-bad-char-literals-6.stderr
error: character literal may only contain one codepoint
  --> $DIR/lex-bad-char-literals-6.rs:2:19
   |
LL |     let x: &str = 'ab';
   |                   ^^^^
   |
help: if you meant to write a `str` literal, use double quotes
   |
LL |     let x: &str = "ab";
   |                   ~~~~

error: character literal may only contain one codepoint
  --> $DIR/lex-bad-char-literals-6.rs:4:19
   |
LL |     let y: char = 'cd';
   |                   ^^^^
   |
help: if you meant to write a `str` literal, use double quotes
   |
LL |     let y: char = "cd";
   |                   ~~~~

error: character literal may only contain one codepoint
  --> $DIR/lex-bad-char-literals-6.rs:6:13
   |
LL |     let z = 'ef';
   |             ^^^^
   |
help: if you meant to write a `str` literal, use double quotes
   |
LL |     let z = "ef";
   |             ~~~~

error[E0277]: can't compare `&str` with `char`
  --> $DIR/lex-bad-char-literals-6.rs:9:10
   |
LL |     if x == y {}
   |          ^^ no implementation for `&str == char`
   |
   = help: the trait `PartialEq<char>` is not implemented for `&str`

error[E0308]: mismatched types
  --> $DIR/lex-bad-char-literals-6.rs:15:20
   |
LL |     let a: usize = "";
   |            -----   ^^ expected `usize`, found `&str`
   |            |
   |            expected due to this

error[E0277]: can't compare `&str` with `char`
  --> $DIR/lex-bad-char-literals-6.rs:12:10
   |
LL |     if x == z {}
   |          ^^ no implementation for `&str == char`
   |
   = help: the trait `PartialEq<char>` is not implemented for `&str`

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
